# C-OO

./: README.md
inheritance/: CMakeLists.txt  README.md  build.bat  main.c
inheritance/components/: CMakeLists.txt
inheritance/components/Object/: CMakeLists.txt  object.c
inheritance/components/Object/include/: object.h
inheritance/components/Person/: CMakeLists.txt  person.c
inheritance/components/Person/include/: person.h
package/: CMakeLists.txt  README.md  main.c
package/components/class/: CMakeLists.txt  class.c
package/components/class/include/: class.h
package/include/: main.h
packageOptimized/: README.md  build.bat  main.c
packageOptimized/components/: CMakeLists.txt
packageOptimized/components/class/: class.c
packageOptimized/components/class/include/: class.h
packageSimplified/: CMakeLists.txt  README.md  build.bat  main.c
packageSimplified/components/: CMakeLists.txt
packageSimplified/components/Object/: object.c
packageSimplified/components/Object/include/: object.h
packageSimplified/include/: main.h
polymorphism/: CMakeLists.txt  README.md  build.bat  main.c
polymorphism/components/: CMakeLists.txt
polymorphism/components/man/: CMakeLists.txt  man.c
polymorphism/components/man/include/: man.h
polymorphism/components/object/: object.c
polymorphism/components/object/include/: object.h
polymorphism/components/person/: person.c
polymorphism/components/person/include/: person.h
polymorphism/include/: main.h
